# raytracer

./: .gitignore  CMakeLists.txt  README.md
scenes/: README.md  spheres.json
src/Math/: Matrix.cpp  Matrix.hpp  Vector3D.cpp  Vector3D.hpp
src/Raytracer/: Raytracer.cpp  Raytracer.hpp
src/Scene/: Scene.hpp  SceneElements.hpp  SceneParser.cpp  SceneParser.hpp
